--- a/src/Layout/AppLayout.css
+++ b/src/Layout/AppLayout.css
@@ -2,15 +2,17 @@
    height: 100vh;
    width: 100%;
    display: flex;
+   background-color: #121212;
 }
 
  .navbar {
-   width: 20%; /* 30% of the width for Navbar */
-   background-color: #f4f4f4; /* Optional: For visibility */
+   width: 20%;
+   background-color: #1f1f1f;
+   color: #ffffff;
  }
  
  .app-router {
-   width: 80%; /* Remaining 70% for AppRouter */
-   background-color: #ffffff; /* Optional: For visibility */
+   width: 80%;
+   background-color: #181818;
  }
  
