--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,18 @@ html, body {
   padding: 0;
   color: white;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+.animate-fadeIn {
+  animation: fadeIn 0.6s ease-in-out;
+  animation-fill-mode: forwards; 
+}
