--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(17 24 39);
 }
 
 code {
