--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,20 @@ html, body {
   animation: fadeIn 0.6s ease-in-out;
   animation-fill-mode: forwards; 
 }
+
+
+.chat-content::-webkit-scrollbar {
+  width: 5px; 
+  border-radius: 10px;
+}
+
+.chat-content::-webkit-scrollbar-thumb {
+  background-color: gray;
+  border-radius: 10px; 
+}
+
+.chat-content::-webkit-scrollbar-track {
+  background-color: #1F2937;
+  border-radius: 10px;
+}
+
