--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,15 @@ input[type="password"]::-ms-reveal,
 input[type="password"]::-ms-clear {
   display: none;
 }
+@keyframes fadeInSlow {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
+
+.animate-fadeInSlow {
+  animation: fadeInSlow 1.5s ease-in-out forwards;
+}
